@@ -58,6 +58,7 @@ MENU_CALLBACK( menu_file_recording_play );
 MENU_CALLBACK( menu_file_recording_stop );
 MENU_CALLBACK( menu_file_aylogging_stop );
 MENU_CALLBACK( menu_file_openscrscreenshot );
+MENU_CALLBACK( menu_file_movies_stopmovierecording );
 
 MENU_CALLBACK_WITH_ACTION( menu_options_selectroms_select );
 MENU_CALLBACK( menu_options_filter );
@@ -107,6 +108,9 @@ MENU_CALLBACK( menu_file_aylogging_record );
 
 MENU_CALLBACK( menu_file_savescreenasscr );
 MENU_CALLBACK( menu_file_savescreenaspng );
+
+MENU_CALLBACK( menu_file_movies_recordmovieasscr );
+MENU_CALLBACK( menu_file_movies_recordmovieaspng );
 
 MENU_CALLBACK( menu_options_general );
 MENU_CALLBACK( menu_options_sound );
