@@ -162,9 +162,10 @@ int widget_init( void )
   widget_filenames = NULL;
   widget_numfiles = 0;
 
+  ui_menu_activate( UI_MENU_ITEM_AY_LOGGING, 0 );
+  ui_menu_activate( UI_MENU_ITEM_FILE_MOVIES_RECORDING, 0 );
   ui_menu_activate( UI_MENU_ITEM_RECORDING, 0 );
   ui_menu_activate( UI_MENU_ITEM_RECORDING_ROLLBACK, 0 );
-  ui_menu_activate( UI_MENU_ITEM_AY_LOGGING, 0 );
 
   return 0;
 }
